workflows: Adjust some stuff
Look for main branch instead of master

Revert some removed stuff

--- a/.github/workflows/release-linux.yml
+++ b/.github/workflows/release-linux.yml
@@ -1,6 +1,5 @@
 name: "build-linux"
 on:
-  workflow_dispatch: {}
   release:
     types: ["published"]
 
@@ -9,11 +8,26 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Wait for package update
+      uses: fountainhead/action-wait-for-check@v1.1.0
+      id: wait-for-commit
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
+        checkName: update
+        ref: ${{ github.event.pull_request.head.sha || github.sha }}
+
+     - uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
+        ref: "main"
+
     - name: Make Release Changes
       run: . .github/release-changes.sh "${{ github.event.release.tag_name }}"
 
     - name: Install Node.js, NPM and Yarn
       uses: actions/setup-node@v3
+      with:
+        node-version: 'latest'
 
     - name: Restore dependencies
       run: yarn install
@@ -25,7 +39,7 @@ jobs:
       run: yarn build-linux
 
     - name: Rename Deb File
-      run: mv ./dist/*.deb ./dist/cpavalancheclient_${{ env.version }}.deb
+      run: mv ./dist/*.deb ./dist/cpimaginedclient_${{ env.version }}.deb
       
     - name: Upload Artifacts
       uses: actions/upload-artifact@v3
