--- a/.github/workflows/release-linux.yml
+++ b/.github/workflows/release-linux.yml
@@ -1,4 +1,4 @@
-name: "build-linux"
+name: "Release-Linux"
 on:
   release:
     types: ["published"]
@@ -16,7 +16,7 @@ jobs:
         checkName: update
         ref: ${{ github.event.pull_request.head.sha || github.sha }}
 
-     - uses: actions/checkout@v3
+    - uses: actions/checkout@v3
       with:
         fetch-depth: 0
         ref: "main"
