--- a/.github/workflows/release-mac.yml
+++ b/.github/workflows/release-mac.yml
@@ -5,6 +5,7 @@ on:
 
 jobs:
   publish:
+    permissions: write-all
     runs-on: macos-latest
 
     steps:
@@ -16,13 +17,13 @@ jobs:
         checkName: update
         ref: ${{ github.event.pull_request.head.sha || github.sha }}
 
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
       with:
         fetch-depth: 0
         ref: "main"
 
     - name: Install Node.js, NPM and Yarn
-      uses: actions/setup-node@v3
+      uses: actions/setup-node@v4
       with:
         node-version: 'latest'
 
@@ -36,9 +37,9 @@ jobs:
       run: yarn build-mac
       
     - name: Upload Artifacts
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
-        name: artifacts
+        name: artifacts_macos
         path: |
           ./dist/*.dmg
           ./dist/*.blockmap
