--- a/.github/workflows/release-win.yml
+++ b/.github/workflows/release-win.yml
@@ -5,6 +5,7 @@ on:
 
 jobs:
   publish:
+    permissions: write-all
     runs-on: windows-latest
 
     steps:
@@ -16,13 +17,13 @@ jobs:
         checkName: update
         ref: ${{ github.event.pull_request.head.sha || github.sha }}
 
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
       with:
         fetch-depth: 0
         ref: "main"
 
     - name: Install Node.js, NPM and Yarn
-      uses: actions/setup-node@v3
+      uses: actions/setup-node@v4
       with:
         node-version: 'latest'
         architecture: 'x86'
@@ -37,9 +38,9 @@ jobs:
       run: yarn build-win
       
     - name: Upload Artifacts
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
-        name: artifacts
+        name: artifacts_windows
         path: |
           ./dist/*.exe
           ./dist/*.blockmap
