--- a/.github/workflows/release-win.yml
+++ b/.github/workflows/release-win.yml
@@ -10,7 +10,7 @@ jobs:
 
     steps:
     - name: Wait for package update
-      uses: fountainhead/action-wait-for-check@v1.1.0
+      uses: ivan-sre/action-wait-for-check@v5.0.0
       id: wait-for-commit
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
@@ -27,8 +27,14 @@ jobs:
       with:
         node-version: 'latest'
         architecture: 'x86'
+    
+    - name: Get corepack
+      run: npm install -g corepack
 
-    - name: Restore dependencies
+    - name: Enable corepack
+      run: corepack enable
+
+    - name: Update yarn
       run: yarn install
 
     - name: Build Typescript
