workflows: Do we need to install corepack?

--- a/.github/workflows/release-mac.yml
+++ b/.github/workflows/release-mac.yml
@@ -27,8 +27,9 @@ jobs:
       with:
         node-version: 'latest'
 
-    - name: Get corepack
-      run: npm install -g corepack
+    # Do we need to do this?
+    # - name: Get corepack
+    #   run: npm install -g corepack
 
     - name: Enable corepack
       run: corepack enable
