--- a/package.json
+++ b/package.json
@@ -77,7 +77,8 @@
     "electron-log": "^5.1.1",
     "electron-prompt": "^1.7.0",
     "electron-store": "^8.1.0",
-    "electron-updater": "^6.1.7"
+    "electron-updater": "^6.1.7",
+    "node-gyp": "10.0.1"
   },
   "//": {
     "This seems to need to be installed manually as it seems to try to download some components from the latest version (1.26.16) even though I'm specifying 1.25.2.": "We don't need to worry about it right now though so I'm leaving these out.",
