Patch node-gyp to fix openssl_fips errors

--- a/package.json
+++ b/package.json
@@ -78,12 +78,15 @@
     "electron-prompt": "^1.7.0",
     "electron-store": "^8.1.0",
     "electron-updater": "^6.1.7",
-    "node-gyp": "10.0.1"
+    "node-gyp": "patch:node-gyp@npm%3A10.0.1#~/patches/node-gyp-npm-10.0.1-48708ce70b.patch"
   },
   "//": {
     "This seems to need to be installed manually as it seems to try to download some components from the latest version (1.26.16) even though I'm specifying 1.25.2.": "We don't need to worry about it right now though so I'm leaving these out.",
     "@cliqz/adblocker-electron": "^1.25.2",
     "cross-fetch": "^4.0.0"
   },
-  "packageManager": "yarn@4.1.0"
+  "packageManager": "yarn@4.1.0",
+  "resolutions": {
+    "node-gyp@npm:latest": "patch:node-gyp@npm%3A10.0.1#~/patches/node-gyp-npm-10.0.1-48708ce70b.patch"
+  }
 }
