Fix `copy-files` script
Did nobody tell you that most operating systems are case-sensitive?

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./compiled/main.js",
   "scripts": {
     "clean": "rimraf compiled/",
-    "copy-files": "copyfiles -u 1 assets/**/* assets/* assets/flash/PepperFlashPlayer.plugin/Contents/* assets/flash/PepperFlashPlayer.plugin/Contents/_CodeSignature/* assets/flash/PepperFlashPlayer.plugin/Contents/MacOs/* compiled/assets/",
+    "copy-files": "copyfiles -u 1 assets/**/* assets/* assets/flash/PepperFlashPlayer.plugin/Contents/* assets/flash/PepperFlashPlayer.plugin/Contents/_CodeSignature/* assets/flash/PepperFlashPlayer.plugin/Contents/MacOS/* compiled/assets/",
     "copy-localization": "copyfiles -u 1 src/localization/*.json compiled/",
     "build-tsc": "yarn clean && tsc && yarn copy-files && yarn copy-localization",
     "start": "yarn build-tsc && electron ./compiled/main.js",
