added myself as a contributor in the `package.json`

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "author": "renanrcp",
   "contributors": [
     "ooowoo",
-    "JeffTheRock"
+    "JeffTheRock",
+    "ERmilburn02"
   ],
   "license": "MIT",
   "build": {
