Update Windows workflow to use 64-bit node
NOTE: It will still build a 32-bit binary, this is just the version of Node that it will be using

--- a/.github/workflows/release-win.yml
+++ b/.github/workflows/release-win.yml
@@ -26,7 +26,8 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: 'latest'
-        architecture: 'x86'
+        # Why was this set?
+        # architecture: 'x86'
     
     # Do we need to do this?
     # - name: Get corepack
