--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build-tsc": "yarn clean && tsc && yarn copy-files && yarn copy-localization",
     "start": "yarn build-tsc && electron ./compiled/main.js",
     "lint": "eslint -c .eslintrc --ext .ts ./src",
-    "build-win": "electron-builder build --win --publish never",
+    "build-win": "electron-builder build --win --ia32 --publish never",
     "build-mac": "electron-builder build --mac --publish never",
     "build-linux": "electron-builder build --linux --x64 --publish never"
   },
